<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_item_wanandroid"
        android:title="@string/text_wanandroid"
        android:icon="@drawable/ic_wan_android"
        android:checkable="true"
        android:checked="true"></item>
    <item
        android:id="@+id/main_item_like"
        android:title="@string/text_like"
        android:icon="@drawable/icon_like"
        android:checkable="true"></item>
    <item
        android:id="@+id/main_item_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/text_setting"
        android:checkable="true" />
    <item
        android:id="@+id/main_item_about"
        android:title="@string/text_about"
        android:icon="@drawable/ic_about"
        android:checkable="true"></item>

</menu>