<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="@dimen/dp_6">

        <include layout="@layout/search_toolbar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/comment_line" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/search_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hot_search"
                android:textColor="@color/light_deep_red"
                android:textSize="@dimen/sp_16"
                android:layout_marginBottom="@dimen/dp_8" />

            <com.zhy.view.flowlayout.TagFlowLayout
                android:id="@+id/top_search_flow_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:max_select="0" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24">

                <TextView
                    android:id="@+id/search_history_clear_all_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_all"
                    android:textColor="@color/delete_text"
                    android:drawableStart="@drawable/ic_clear_all_gone"
                    android:drawablePadding="@dimen/dp_6"
                    android:layout_alignParentEnd="true"
                    android:drawableLeft="@drawable/ic_clear_all_gone"
                    android:layout_alignParentRight="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history_search"
                    android:textColor="@color/colorPrimaryOverlay"
                    android:textSize="@dimen/sp_16"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/search_history_clear_all_tv"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/search_history_clear_all_tv" />
            </RelativeLayout>

            <TextView
                android:id="@+id/search_history_null_tint_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_null_tint"
                android:textColor="@color/comment_text"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_20"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_history_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:background="@color/colorBackground" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>